@@ -1,6 +1,16 @@
-number.h
-number.c
 *.lo
 *.la
 .deps
-COPYING
+*.plg
+*.opt
+*.ncb
+*.dsw
+Release
+Release_inline
+Debug
+Release_TS
+Release_TSDbg
+Release_TS_inline
+Debug_TS
+Release_TS_SSL
+Debug_TS_SSL
